<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cart">

    <ScrollView
        android:layout_width="425dp"
        android:layout_height="401dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/CB_cart1"
                        android:layout_width="7dp"
                        android:layout_height="103dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/P_cartImg1"
                        android:layout_width="wrap_content"
                        android:layout_height="101dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/alert_dark_frame" />

                    <LinearLayout
                        android:layout_width="243dp"
                        android:layout_height="104dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/L_cartTitle1"
                            android:layout_width="match_parent"
                            android:layout_height="41dp"
                            android:layout_weight="1"
                            android:text="@string/手機1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/L_cartAmount1"
                                android:layout_width="197dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/手機1金額" />

                            <EditText
                                android:id="@+id/T_cartQty1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="11"
                                android:ems="10"
                                android:inputType="number" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/CB_cart2"
                        android:layout_width="7dp"
                        android:layout_height="103dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/P_cartImg2"
                        android:layout_width="wrap_content"
                        android:layout_height="101dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/alert_dark_frame" />

                    <LinearLayout
                        android:layout_width="243dp"
                        android:layout_height="104dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/L_cartTitle2"
                            android:layout_width="match_parent"
                            android:layout_height="41dp"
                            android:layout_weight="1"
                            android:text="@string/穿戴1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/L_cartAmount2"
                                android:layout_width="197dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/穿戴1金額" />

                            <EditText
                                android:id="@+id/T_cartQty2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="11"
                                android:ems="10"
                                android:inputType="number" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/CB_cart3"
                        android:layout_width="7dp"
                        android:layout_height="103dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/P_cartImg3"
                        android:layout_width="wrap_content"
                        android:layout_height="101dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/alert_dark_frame" />

                    <LinearLayout
                        android:layout_width="243dp"
                        android:layout_height="104dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/L_cartTitle3"
                            android:layout_width="match_parent"
                            android:layout_height="41dp"
                            android:layout_weight="1"
                            android:text="@string/衣服1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/L_cartAmount3"
                                android:layout_width="197dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/衣服1金額" />

                            <EditText
                                android:id="@+id/T_cartQty3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="11"
                                android:ems="10"
                                android:inputType="number" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/CB_cart4"
                        android:layout_width="7dp"
                        android:layout_height="103dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/P_cartImg4"
                        android:layout_width="wrap_content"
                        android:layout_height="101dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/alert_dark_frame" />

                    <LinearLayout
                        android:layout_width="243dp"
                        android:layout_height="104dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/L_cartTitle4"
                            android:layout_width="match_parent"
                            android:layout_height="41dp"
                            android:layout_weight="1"
                            android:text="@string/鞋子1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/L_cartAmount4"
                                android:layout_width="197dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/鞋子1金額" />

                            <EditText
                                android:id="@+id/T_cartQty4"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="11"
                                android:ems="10"
                                android:inputType="number" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/CB_cart5"
                        android:layout_width="7dp"
                        android:layout_height="103dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/P_cartImg5"
                        android:layout_width="wrap_content"
                        android:layout_height="101dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/alert_dark_frame" />

                    <LinearLayout
                        android:layout_width="243dp"
                        android:layout_height="104dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/L_cartTitle5"
                            android:layout_width="match_parent"
                            android:layout_height="41dp"
                            android:layout_weight="1"
                            android:text="@string/食物1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/L_cartAmount5"
                                android:layout_width="197dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/食物1金額" />

                            <EditText
                                android:id="@+id/T_cartQty5"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="11"
                                android:ems="10"
                                android:inputType="number" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/B_deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="1"
            android:text="clear" />

        <TextView
            android:id="@+id/T_totalamount"
            android:layout_width="216dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="$:"
            android:textSize="34sp" />

        <Button
            android:id="@+id/B_pay"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:onClick="gopay"
            android:text="pay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/B_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MainOnClick"
            android:text="商城"
            android:textSize="20sp" />

        <Button
            android:id="@+id/B_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="CartOnClick"
            android:text="購物車"
            android:textSize="20sp" />

        <Button
            android:id="@+id/B_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="SettingOnClick"
            android:text="設定"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>